--- a/src/main/resources/static/chat/css/chat.css
+++ b/src/main/resources/static/chat/css/chat.css
@@ -217,6 +217,9 @@ nav{
 
 .chat-sidebar-content-container::-webkit-scrollbar {
     display:none;
+    position: absolute;
+    width: 3px;
+    background-color: transparent;
 }
 .chat-sidebar-content-container:hover::-webkit-scrollbar{
     display: inline-block;
@@ -227,12 +230,6 @@ nav{
     background-color: transparent;
 }
 
-.chat-sidebar-content-container::-webkit-scrollbar
-{
-    position: absolute;
-    width: 3px;
-    background-color: transparent;
-}
 .chat-sidebar-content-container::-webkit-scrollbar-thumb
 {
     border-radius: 3px;
